# sew

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  network.py  renderer.py  server.py  settings.gradle.kts
.github/workflows/: build.yml  gradle.yml  java_build.yml  kotlin_build.yml
android/: build.gradle  build.gradle.kts
android/res/values/: styles.xml
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  main.cpp
android/src/main/java/com/sevgili/oyunu/android/: AndroidLauncher.java
android/src/main/res/values/: strings.xml
assets/: kaan.gltf  kız.gltf  kız1.gltf
assets/models/: model_config.py
core/: build.gradle  build.gradle.kts
core/src/main/java/com/sevgili/oyunu/game/: GrafikAyarlari.java  Karakter.java  SevgiliOyunu.java
core/src/main/kotlin/com/sevgili/oyunu/: Renderer3D.kt
core/src/main/kotlin/com/sevgili/oyunu/game/: GrafikAyarlari.kt
legacy_python_code/: buildozer.spec  client.py  karakter.py
